PARQUET-1033: Improve documentation about WriteBatchSpaced

Author: Uwe L. Korn <uwe@apache.org>

Closes #354 from xhochy/PARQUET-1033 and squashes the following commits:

895676a [Uwe L. Korn] Remove trailing comment line
709ef32 [Uwe L. Korn] PARQUET-1033: Improve documentation about WriteBatchSpaced

Change-Id: Id3c813519b6ef1fd77c290cd163fc599a5ffcaf1